# OOPs

./: .gitignore  README.md
1-intro/: vector.cpp
classwork/1-intro/: main.cpp
classwork/2-classes/: Vector.cpp  Vector.hpp  main.cpp
classwork/3-encapsulation/: exercise.cpp  main.cpp
classwork/4-constructors/: book.cpp  main.cpp
classwork/5-exercises/: Animal.cpp  Animal.hpp  Zoo.cpp  Zoo.hpp
classwork/6-exceptions/: main.cpp
classwork/7-streams/: main.cpp
classwork/8-fstream/: main.cpp  spotify_fs.cpp
classwork/9-unit-tests/: main.cpp  main_tests.cpp
docs/: README.md
exam/03-06-22/: input.txt  main.cpp  output.txt
hw/07-03-22_planet/: README.MD  main.cpp
hw/10-03-22_library/: Book.cpp  Book.hpp  Library.cpp
hw/16-03-22_playlist/: Playlist.cpp  Playlist.hpp  Song.cpp
hw/17-02-22_vector/: main.cpp  main_ref.cpp
hw/SMALL/05-05-22-spotify-ex/: README.md  main.cpp  temp.cpp
hw/SMALL/07-03-22_planet/: dynamic_main.cpp  main.cpp
hw/SMALL/10-03-22_library/: Library.hpp  README.MD  main.cpp
hw/SMALL/16-03-22_playlist/: README.md  Song.hpp  main.cpp
hw/big/battle/: input.txt  main.cpp  output.txt
hw/big/store/: CMakeLists.txt  README.md
hw/big/store/include/store/: Product.hpp  Property.hpp  Store.hpp
hw/big/store/src/: Product.cpp  Property.cpp  Store.cpp  main.cpp
hw/testing/: testCode.cpp
